force-app/main/default/objects/Program_Contact_Role__c/Program_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Program Contact Role</label>
    <nameField>
        <displayFormat>PCR-{000}</displayFormat>
        <label>Program Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>