force-app/main/default/objects/Program_Contact_Role__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>CASESAFEID(Contact__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>