force-app/main/default/objects/Program_Contact_Role__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>