force-app/main/default/objects/Program_Contact_Role__c/fields/Active_Contact__c.field-meta.xml
<CustomField>
    <fullName>Active_Contact__c</fullName>
    <formula>Contact__r.Active_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Contact</label>
    <type>Checkbox</type>
</CustomField>